[package]
name = "sub-store-cloudflare-worker"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
worker = "0.8.1"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"
